--- a/index.html
+++ b/index.html
@@ -32,18 +32,20 @@
         <h1 class="titre-principal">Trouvez votre hébergement pour des vacances de rêve</h1>
         <p class="descr-t-p">En plein centre-ville ou en pleine nature</p>
 <!-- Barre de recherche -->
-        <section class="barre-de-recherche">
-            <div class="icone-barre-de-recherche">
-                <i class="fas fa-map-marker-alt"></i>
-            </div>
-            <input class="input-barre-de-recherche" placeholder="Marseille, France" type="text">
-            <button class="bouton-recherche"> <span class="text-recherche">Recherche</span>
+        <section>
+            <div class="barre-de-recherche">
+                <div class="icone-barre-de-recherche">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <input class="input-barre-de-recherche" placeholder="Marseille, France" type="text">
+                <button class="bouton-recherche"> <span class="text-recherche">Recherche</span>
                 <i class="fas fa-magnifying-glass"></i></button>
+            </div>
         </section>
 <!-- Filtres -->
         <section>
             <div class="filtres-liste">
-                <span class="filtre-titre"><h1>Filtres</h1></span>
+                <div class="filtre-titre"><h2>Filtres</h2></div>
                 <div class="filtres">
                 <button> <i class="fa-solid fa-money-bill-wave"></i>Economique</button>
                 <button> <i class="fa-solid fa-person"></i>Familial</button>
@@ -62,7 +64,7 @@
             <div class="hebergement-cards">
                 <div class="cards-wrapper">
                     <article class="card-hebe">
-                        <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                        <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                         <div class="card-content">
                             <div class="card-txt">
                             <h3 class="card-title">Hôtel du port</h3>
@@ -79,7 +81,7 @@
                         </div>
                     </article>
                 <article class="card-hebe">
-                    <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                    <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                     <div class="card-content">
                       <div class="card-txt">
                         <h3 class="card-title">Hôtel Chez Amina</h3>
@@ -96,7 +98,7 @@
                     </div>
                   </article>
                   <article class="card-hebe">
-                    <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                    <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                     <div class="card-content">
                       <div class="card-txt">
                         <h3 class="card-title">Hôtel Les mouettes</h3>
@@ -113,7 +115,7 @@
                     </div>
                   </article>
                   <article class="card-hebe">
-                    <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                    <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                     <div class="card-content">
                         <div class="card-txt">
                         <h3 class="card-title">Hotêl de la mer</h3>
@@ -130,7 +132,7 @@
                     </div>
                 </article>
             <article class="card-hebe">
-                <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Auberge La Canebière</h3>
@@ -147,7 +149,7 @@
                 </div>
               </article>
               <article class="card-hebe">
-                <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Auberge Le Panier</h3>
@@ -175,7 +177,7 @@
             </div>
             <div class="populaires-cards">
               <article class="card">
-                <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Le soleil du matin</h3>
@@ -192,7 +194,7 @@
                 </div>
               </article>
               <article class="card">
-                <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Chambres d'hôtes Au cœur de l'eau</h3>
@@ -209,7 +211,7 @@
                 </div>
               </article>
               <article class="card">
-                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+                <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                 <div class="card-content">
                   <div class="card-txt">
                     <h3 class="card-title">Hôtel Bleu et Blanc</h3>
@@ -233,7 +235,7 @@
     <h2 class="activites-a-marseille">Activités à Marseille</h2>
     <div class="cards-container">
         <article class="card-acti">
-            <img src="./images/activites/reno-laithienne.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+            <img src="./images/activites/reno-laithienne.jpg" alt="Image de la chambre d'hôtel montrant un lit">
             <div class="card-content">
                 <div class="card-txt">
                     <h3 class="card-title">Vieux-port</h3>
@@ -241,7 +243,7 @@
             </div>
         </article>
         <article class="card-acti">
-            <img src="./images/activites/paul-hermann.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+            <img src="./images/activites/paul-hermann.jpg" alt="Image de la chambre d'hôtel montrant un lit">
             <div class="card-content">
                 <div class="card-txt">
                     <h3 class="card-title">Fort de Pomègues</h3>
@@ -249,7 +251,7 @@
             </div>
         </article>
         <article class="card-acti">
-            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image de la chambre d'hôtel montrant un lit">
             <div class="card-content">
                 <div class="card-txt">
                     <h3 class="card-title">Parc national des Calanques</h3>
@@ -257,7 +259,7 @@
             </div>
         </article>
         <article class="card-acti">
-            <img src="./images/activites/florian-wehde.jpg" alt="Image de la chambre d'hôtel montrant un lit" />
+            <img src="./images/activites/florian-wehde.jpg" alt="Image de la chambre d'hôtel montrant un lit">
             <div class="card-content">
                 <div class="card-txt">
                     <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
