--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <p class="descr-t-p">En plein centre-ville ou en pleine nature</p>
 <!-- Barre de recherche -->
         <section>
+            <h2 class="visually-hidden">Barre de recherche</h2>
             <div class="barre-de-recherche">
                 <div class="icone-barre-de-recherche">
                     <i class="fas fa-map-marker-alt"></i>
