--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <img id="logo-booki" src="/images/logo/Booki.png" alt="Logo Booki">
             <div class="sub-nav">
-                <a id="hebergement" class="sub-nav-left" href="hebergement.html">Hébergement</a>
+                <a id="hebergement" class="sub-nav-left" href="#heber">Hébergement</a>
                 <a href="activites.html" class="sub-nav-right">Activités</a>
             </div>
         </nav>
@@ -58,7 +58,7 @@
 <!-- Contenue des annonces -->
         <div class="informations"> <i class="fa-solid fa-info"> </i>Plus de 500 logements sont disponible dans cette ville</div>
         <div class="hebergements-and-populaires">
-          <section class="hebergements">
+          <section id="heber" class="hebergements">
             <div class="hebergement-title">
                 <h2 class="section-title">Hébergement à Marseille</h2>
             </div>
