--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img id="logo-booki" src="/images/logo/Booki.png" alt="Logo Booki">
             <div class="sub-nav">
                 <a id="hebergement" class="sub-nav-left" href="#heber">Hébergement</a>
-                <a href="activites.html" class="sub-nav-right">Activités</a>
+                <a id="activites-a-marseille" class="sub-nav-right" href="#acti">Activités</a>
             </div>
         </nav>
       </header>
@@ -233,7 +233,7 @@
         </div>
         <!-- Activités à Marseille -->
 <section>
-    <h2 class="activites-a-marseille">Activités à Marseille</h2>
+    <h2 id="acti" class="activites-a-marseille">Activités à Marseille</h2>
     <div class="cards-container">
         <article class="card-acti">
             <img src="./images/activites/reno-laithienne.jpg" alt="Image de la chambre d'hôtel montrant un lit">
