--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </header>
 <!-- Description principale -->
       <main>
+        <div class="haut">
         <h1 class="titre-principal">Trouvez votre hébergement pour des vacances de rêve</h1>
         <p class="descr-t-p">En plein centre-ville ou en pleine nature</p>
 <!-- Barre de recherche -->
@@ -55,6 +56,7 @@
                 </div>
             </div>
         </section>
+        </div>
 <!-- Contenue des annonces -->
         <div class="informations"> <i class="fa-solid fa-info"> </i>Plus de 500 logements sont disponible dans cette ville</div>
         <div class="hebergements-and-populaires">
