--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <img id="logo-booki" src="/images/logo/Booki.png" alt="Logo Booki">
             <div class="sub-nav">
-                <a id="hebergement" class="sub-nav-left" href="#heber">Hébergement</a>
+                <a id="hebergement" class="sub-nav-left" href="#heber">Hébergements</a>
                 <a id="activites-a-marseille" class="sub-nav-right" href="#acti">Activités</a>
             </div>
         </nav>
